--- a/index.html
+++ b/index.html
@@ -267,7 +267,9 @@
       <button class="side-btn toggle-emoji" id="emojiToggle"><i class="ph ph-smiley"></i></button>
       <button class="side-btn end-call"><i class="ph ph-phone-disconnect"></i></button>
 	  
-	  
+	 <input type="text" id="userIdInput" placeholder="Tu ID" style="width: 50px; padding: 5px; font-size: 12px; border-radius: 8px; border: none;">
+<button class="side-btn" id="startConnectionBtn"><i class="ph ph-plug"></i></button>
+
 	  <div style="width: 100%; display: flex; flex-direction: column; align-items: center; gap: 5px; padding: 5px;">
   <input id="remoteIdInput" type="text" placeholder="ID remoto" style="width: 90%; padding: 4px; border-radius: 6px; border: none; text-align: center;" />
   <button id="btnLlamar" class="side-btn" style="width: 90%; font-size: 14px; padding: 6px;">Llamar</button>
@@ -548,7 +550,17 @@ btnLlamar.addEventListener("click", () => {
   }
 });
 
-	
+	const startConnectionBtn = document.getElementById("startConnectionBtn");
+const userIdInput = document.getElementById("userIdInput");
+
+startConnectionBtn.addEventListener("click", () => {
+  const userId = userIdInput.value.trim();
+  if (!userId) {
+    alert("Por favor ingresa tu ID antes de conectar.");
+    return;
+  }
+  iniciarConexion(userId);
+});
 	
 	
   </script>
