--- a/index.html
+++ b/index.html
@@ -89,8 +89,18 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      flex-direction: column;
+      flex-direction: column;	  
     }
+	
+	.video-main video,
+.video-mini video {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background: black;
+}
+
+	
     .screen-share {
       display: none;
       justify-content: center; align-items: center;
