--- a/index.html
+++ b/index.html
@@ -92,14 +92,13 @@
       flex-direction: column;	  
     }
 	
-	.video-main video,
+.video-main video,
 .video-mini video {
   width: 100%;
   height: 100%;
-  object-fit: contain;
-  background: black;
+  object-fit: cover;
+  background: linear-gradient(to bottom, #ffffff, #0a2b5c);
 }
-
 	
     .screen-share {
       display: none;
